force-app/main/default/objects/LogACall__c/LogACall__c.object-meta.xml
<CustomObject>
    <label>Log A Call</label>
    <nameField>
        <displayFormat>Call-{00000}</displayFormat>
        <label>Log A Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>