force-app/main/default/objects/LogACall__c/fields/Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Account_Names__c</fullName>
    <label>Account Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>