force-app/main/default/objects/LogACall__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <label>Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>