force-app/main/default/objects/LogACall__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments or Notes From Event</label>
    <type>TextArea</type>
</CustomField>