force-app/main/default/objects/LogACall__c/fields/Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Contact_Names__c</fullName>
    <label>Contact Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>