force-app/main/default/objects/LogACall__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <label>Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>