force-app/main/default/objects/LogACall__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <description>Total of expense Amount</description>
    <label>Expense Amount</label>
    <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Log_A_Call__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>