force-app/main/default/objects/LogACall__c/fields/Mileage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Cost__c</fullName>
    <formula>IF(  ISPICKVAL( Mileage_Type__c , &quot;Car Allowance&quot;) ,
    IF(  ISBLANK( Mileage_Traveled__c ) , 0,  Mileage_Traveled__c * 0.225 )   ,
     IF(  ISBLANK( Mileage_Traveled__c ) , 0,  Mileage_Traveled__c * 0.625)   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>