force-app/main/default/objects/LogACall__c/fields/Mileage_Traveled__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Traveled__c</fullName>
    <label>Mileage Traveled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>