force-app/main/default/objects/LogACall__c/fields/Mileage_Type__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Type__c</fullName>
    <label>Mileage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Allowance</fullName>
                <default>true</default>
                <label>Car Allowance</label>
            </value>
            <value>
                <fullName>No Car Allowance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>