force-app/main/default/objects/LogACall__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>IF(OR(ISPICKVAL(Type_of_Call__c, &apos;Client Office Visit&apos;), 
ISPICKVAL(Type_of_Call__c, &apos;Site Visit (Project Related)&apos;)), 5, 
IF(OR(ISPICKVAL(Type_of_Call__c, &apos;Entertain (Hpy Hr, Glf, Gms)&apos;),
ISPICKVAL(Type_of_Call__c, &apos;End User Visit&apos;), 
ISPICKVAL(Type_of_Call__c, &apos;Meal&apos;)), 10, 
IF(ISPICKVAL(Type_of_Call__c, &apos;Factory Visit (Travel)&apos;), 30, 
IF(OR(ISPICKVAL(Type_of_Call__c, &apos;Factory Visit (Local)&apos;), 
ISPICKVAL(Type_of_Call__c, &apos;Training (L-N-L, Seminar)&apos;)), 20, 10))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>