force-app/main/default/objects/LogACall__c/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Office Visit</fullName>
            </value>
            <value>
                <fullName>End User Visit</fullName>
            </value>
            <value>
                <fullName>Entertain (Hpy Hr, Glf, Gms)</fullName>
            </value>
            <value>
                <fullName>Expense Only</fullName>
            </value>
            <value>
                <fullName>Factory Visit (Travel)</fullName>
            </value>
            <value>
                <fullName>Industry Event (Ashrae etc.)</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Site Visit (Project Related)</fullName>
            </value>
            <value>
                <fullName>Training (L-N-L, Seminar)</fullName>
            </value>
            <value>
                <fullName>Factory Visit (Local)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>