force-app/main/default/objects/LogACall__c/listViews/Dakota_Jones_Calls.listView-meta.xml
<ListView>
    <fullName>Dakota_Jones_Calls</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contact_Names__c</columns>
    <columns>Account_Names__c</columns>
    <columns>Comments__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Type_of_Call__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>djone</value>
    </filters>
    <label>Dakota Jones&apos; Calls</label>
    <sharedTo>
        <role>Oklahoma</role>
    </sharedTo>
</ListView>