force-app/main/default/objects/LogACall__c/listViews/Nolan_s_Calls.listView-meta.xml
<ListView>
    <fullName>Nolan_s_Calls</fullName>
    <columns>NAME</columns>
    <columns>Contact_Names__c</columns>
    <columns>Account_Names__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Type_of_Call__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Nolan&apos;s Calls</label>
    <sharedTo>
        <role>Oklahoma</role>
    </sharedTo>
</ListView>