force-app/main/default/objects/LogACall__c/listViews/Oklahoma_Team_Calls.listView-meta.xml
<ListView>
    <fullName>Oklahoma_Team_Calls</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contact_Names__c</columns>
    <columns>Account_Names__c</columns>
    <columns>Comments__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Type_of_Call__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>djone,bhami,nchan</value>
    </filters>
    <label>Oklahoma Team Calls</label>
    <sharedTo>
        <role>Oklahoma</role>
    </sharedTo>
</ListView>